--- a/index.html
+++ b/index.html
@@ -113,15 +113,13 @@
 
                 <img src="images/HOJAT.png" alt="Profile Picture">
 
-                <p class="lead">I'm a professional software developer recently graduated from <a
-                        href="https://laurentian.ca/program/GR-CPS">Laurentian University</a> in
-                    master's degree of Computer Science. I have been studying/working in the field of computer science
+                <p class="lead">I'm a published native Android app developer recently graduated from Master's degree of Computer Science. I have been studying/working in the field
+                    of computer science
                     during the past decade. <a
                             href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus"
                             style="color:blue">Notify Plus</a> is the
                     latest example of my published Android apps, originally
-                    developed in Java and later on migrated to Kotlin. My focus is on maintainable native
-                    Android apps that can be scaled up conveniently.</p>
+                    developed in Java and later on migrated to Kotlin. My current focus is on maintainability, scalability, and reactiveness of the end product.</p>
             </div>
 
         </div>
@@ -248,7 +246,8 @@
 
                     <div class="timeline-header">
                         <h3>Bachelor of science - <a
-                                href="https://en.wikipedia.org/wiki/Shahid_Bahonar_University_of_Kerman">SBUK</a> -
+                                href="https://en.wikipedia.org/wiki/Shahid_Bahonar_University_of_Kerman">SBUK</a>
+                            -
                             2012_2017</h3>
                     </div>
 
@@ -286,26 +285,33 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3><a href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus">Notify
-                            Plus</a></h3>
+                        <h3>
+                            <a href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus">Notify
+                                Plus</a></h3>
                     </div>
 
                     <div class="timeline-content">
 
-                        <p>Notify Plus is a feature-rich tool box that makes your Android experience even more fun! The
+                        <p>Notify Plus is a feature-rich tool box that makes your Android experience
+                            even more fun! The
                             app provides you with 2 main tools:</p>
                         <ol>
-                            <li>A sticky notification containing 8 modifiable shortcuts to user's favorite apps.</li>
-                            <li>A floating widget which can work as an equivalent of floating control center in
+                            <li>A sticky notification containing 8 modifiable shortcuts to user's
+                                favorite apps.
+                            </li>
+                            <li>A floating widget which can work as an equivalent of floating
+                                control center in
                                 iOS.
                             </li>
                         </ol>
-                        <p>Apart from all the fun, the most important experiences I took from this project were
+                        <p>Apart from all the fun, the most important experiences I took from this
+                            project were
                             these:</p>
                         <ol>
                             <li>Google Play Store publishing process.</li>
                             <li>Git Version Control.</li>
-                            <li><a href="https://developer.android.com/reference/kotlin/android/widget/RemoteViews">RemoteViews</a>
+                            <li>
+                                <a href="https://developer.android.com/reference/kotlin/android/widget/RemoteViews">RemoteViews</a>
                                 in Android.
                             </li>
                             <li>Sticky notifications in Android.</li>
@@ -331,12 +337,15 @@
                     </div>
 
                     <div class="timeline-content">
-                        <p>Historically, Android apps used SQLite API for creating a local relational database. While
+                        <p>Historically, Android apps used SQLite API for creating a local
+                            relational database. While
                             that
-                            worked fine, the modern Room persistence library offers compile-tile SQL query verification
+                            worked fine, the modern Room persistence library offers compile-tile SQL
+                            query verification
                             and convenience annotations to reduce code lines.
                             <br/>
-                            "Room Demo" is my template app for creating a single-table relational database storing
+                            "Room Demo" is my template app for creating a single-table relational
+                            database storing
                             subscribers. Source code is available <a
                                     href="https://github.com/hojat72elect/RoomDemo">here</a>.<br/>
                             Technologies used:
@@ -362,17 +371,23 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3><a href="https://github.com/hojat72elect/Retrofit_Demo">Retrofit Demo</a></h3>
+                        <h3><a href="https://github.com/hojat72elect/Retrofit_Demo">Retrofit
+                            Demo</a></h3>
                     </div>
 
                     <div class="timeline-content">
                         <p>
-                            Retrofit library is the most common choice of Java developers for connecting to a RESTFul
-                            API in the back end.<br/> "Retrofit Demo" is my template app for reading JSON file from
+                            Retrofit library is the most common choice of Java developers for
+                            connecting to a RESTFul
+                            API in the back end.<br/> "Retrofit Demo" is my template app for reading
+                            JSON file from
                             server
-                            and then present it to the user with the help of LiveData and kotlin Coroutine libraries.
-                            The JSON data is parsed into kotlin data classes with GSON converter library; furthermore,
-                            OkHttp logging interceptor was used for logging network interactions. Source code is
+                            and then present it to the user with the help of LiveData and kotlin
+                            Coroutine libraries.
+                            The JSON data is parsed into kotlin data classes with GSON converter
+                            library; furthermore,
+                            OkHttp logging interceptor was used for logging network interactions.
+                            Source code is
                             available <a
                                 href="https://github.com/hojat72elect/Retrofit_Demo">here</a>.
                             <br/>Technologies
@@ -404,19 +419,25 @@
 
                     <div class="timeline-content">
                         <p>
-                            <a href="https://en.wikipedia.org/wiki/Reactive_programming">Reactive programming</a>
+                            <a href="https://en.wikipedia.org/wiki/Reactive_programming">Reactive
+                                programming</a>
                             paradigm is the best answer for the problem of handling realtime
-                            streams of data and state change propagation in an asynchronous fashion; and
-                            <a href="https://reactivex.io/">ReactiveX</a> library helps in achieving reactiveness in a
-                            langauge independent fashion. Consequently, <a href="https://github.com/ReactiveX/RxJava">RxJava</a>
+                            streams of data and state change propagation in an asynchronous fashion;
+                            and
+                            <a href="https://reactivex.io/">ReactiveX</a> library helps in achieving
+                            reactiveness in a
+                            langauge independent fashion. Consequently, <a
+                                href="https://github.com/ReactiveX/RxJava">RxJava</a>
                             and <a
                                 href="https://github.com/ReactiveX/Rxandroid">RxAndroid</a> are
                             de facto
                             path for performing reactive,
-                            event-driven apps in native Android.<br/>"RxJava Demo" is my template app for easily
+                            event-driven apps in native Android.<br/>"RxJava Demo" is my template
+                            app for easily
                             implementing
-                            reactive patterns of RxJava in an Android app. Source code is available <a
-                                href="https://github.com/hojat72elect/RX_Demo">here</a>.
+                            reactive patterns of RxJava in an Android app. Source code is available
+                            <a
+                                    href="https://github.com/hojat72elect/RX_Demo">here</a>.
                         </p>
                     </div>
 
@@ -680,7 +701,8 @@
         </div>
 
         <div id="go-top">
-            <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
+            <a class="smoothscroll" title="Back to Top" href="#top"><i
+                    class="fa fa-long-arrow-up"></i></a>
         </div>
 
     </div>
