added notify plus to my CV

--- a/index.html
+++ b/index.html
@@ -113,13 +113,15 @@
 
                 <img src="images/HOJAT.png" alt="Profile Picture">
 
-                <p class="lead">I'm a published native Android app developer recently graduated from Master's degree of Computer Science. I have been studying/working in the field
+                <p class="lead">I'm a published native Android app developer recently graduated from
+                    Master's degree of Computer Science. I have been studying/working in the field
                     of computer science
                     during the past decade. <a
                             href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus"
                             style="color:blue">Notify Plus</a> is the
                     latest example of my published Android apps, originally
-                    developed in Java and later on migrated to Kotlin. My current focus is on maintainability, scalability, and reactiveness of the end product.</p>
+                    developed in Java and later on migrated to Kotlin. My current focus is on
+                    maintainability, scalability, and reactiveness of the end product.</p>
             </div>
 
         </div>
@@ -192,7 +194,7 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire me</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_3_April_2022.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_20_April_2022.pdf"
                target="_blank" title="Download CV" class="button button-primary">Download my CV</a>
         </div>
     </div>
