--- a/index.html
+++ b/index.html
@@ -193,9 +193,11 @@
 
     <div class="row button-section">
         <div class="col-twelve">
-            <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire me</a>
+            <a href="#contact" title="Hire Me" class="button">Hire me</a>
             <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_3_October_2022.pdf"
-               target="_blank" title="Download CV" class="button button-primary">Download my CV</a>
+               target="_blank" title="Download CV" class="button">CV</a>
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover Letter_3_October_2022.pdf"
+               target="_blank" title="Read Cover letter" class="button">COVER LETTER</a>
         </div>
     </div>
 
