Added "Smart Gallery" to portfolio

--- a/index.html
+++ b/index.html
@@ -337,29 +337,20 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3><a href="https://github.com/hojat72elect/RoomDemo">Room Demo</a></h3>
+                        <h3><a href="https://github.com/hojat72elect/Smart-Gallery">Smart Gallery</a></h3>
                     </div>
 
                     <div class="timeline-content">
-                        <p>Historically, Android apps used SQLite API for creating a local
-                            relational database. While
-                            that
-                            worked fine, the modern Room persistence library offers compile-tile SQL
-                            query verification
-                            and convenience annotations to reduce code lines.
-                            <br/>
-                            "Room Demo" is my template app for creating a single-table relational
-                            database storing
-                            subscribers. Source code is available <a
-                                    href="https://github.com/hojat72elect/RoomDemo">here</a>.<br/>
-                            Technologies used:
+                        <p>
+                            This is an offline, feature-rich native Android gallery that supports various fule formats
+                            such as SVG, GIF, in addition to common file formats supported by android system. I'm trying to implement these technologies in this personal project:
                         <ul>
                             <li>Room persistence library</li>
                             <li>MVVM architecture</li>
                             <li>ViewModel</li>
                             <li>DataBinding</li>
-                            <li>LiveData</li>
-                            <li>kotlin coroutines</li>
+                            <li>StateFlow and SharedFlow</li>
+                            <li>Navigation component</li>
                         </ul>
 
                         </p>
