--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                     <strong>Android Room</strong>
                 </li>
                 <li>
-                    <div class="progress percent50"><span>50%</span></div>
-                    <strong>Retrofit</strong>
+                    <div class="progress percent40"><span>40%</span></div>
+                    <strong>Flow API</strong>
                 </li>
                 <li>
-                    <div class="progress percent50"><span>50%</span></div>
-                    <strong>RxJava</strong>
+                    <div class="progress percent40"><span>30%</span></div>
+                    <strong>Compose</strong>
                 </li>
 
 
