--- a/index.html
+++ b/index.html
@@ -113,14 +113,16 @@
 
                 <img src="images/HOJAT.png" alt="Profile Picture">
 
-                <p class="lead">I'm a published native Android app developer recently graduated from
-                    Master's degree of Computer Science. I have been studying/working in the field
-                    of computer science
-                    during the past decade. <a
+                <p class="lead">I'm a published native Android app developer, recently finished an internship in <a
+                        href="https://www.karglobal.com/" style="color:blue">KAR Global</a> during which I was working
+                    on
+                    <a href="https://play.google.com/store/apps/details?id=com.nthgensoftware.traderev.android&hl=en&pli=1"
+                       style="color:blue">TradeRev</a>
+                    android app. <a
                             href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus"
-                            style="color:blue">Notify Plus</a> is the
-                    latest example of my published Android apps, originally
-                    developed in Java and later on migrated to Kotlin. My current focus is on
+                            style="color:blue">Notify Plus</a> and <a
+                            href="https://github.com/hojat72elect/Smart-Gallery">Smart Gallery</a> are the
+                    latest personal projects I've been working on. My current focus is on
                     maintainability, scalability, and reactiveness of the end product.</p>
             </div>
 
@@ -343,7 +345,8 @@
                     <div class="timeline-content">
                         <p>
                             This is an offline, feature-rich native Android gallery that supports various fule formats
-                            such as SVG, GIF, in addition to common file formats supported by android system. I'm trying to implement these technologies in this personal project:
+                            such as SVG, GIF, in addition to common file formats supported by android system. I'm trying
+                            to implement these technologies in this personal project:
                         <ul>
                             <li>Room persistence library</li>
                             <li>MVVM architecture</li>
