--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </li>
                 <li>
                     <strong>Email:</strong>
-                    <span>hghasemi@laurentian.ca</span>
+                    <span>hojat72elect@gmail.com</span>
                 </li>
                 <li>
                     <strong>Location:</strong>
@@ -181,7 +181,7 @@
                     <strong>Flow API</strong>
                 </li>
                 <li>
-                    <div class="progress percent40"><span>30%</span></div>
+                    <div class="progress percent35"><span>30%</span></div>
                     <strong>Compose</strong>
                 </li>
 
@@ -553,7 +553,7 @@
 
             <h5>Preferred way of connection</h5>
 
-            <p>hghasemi@laurentian.ca
+            <p>hojat72elect@gmail.com
 
 
             </p>
