--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     android app. <a
                             href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus"
                             style="color:blue">Notify Plus</a> and <a
-                            href="https://github.com/hojat72elect/Smart-Gallery">Smart Gallery</a> are the
+                            href="https://github.com/hojat72elect/Smart-Gallery" style="color:blue">Smart Gallery</a> are the
                     latest personal projects I've been working on. My current focus is on
                     maintainability, scalability, and reactiveness of the end product.</p>
             </div>
@@ -412,7 +412,7 @@
                     <h3>MY PREFERRED TECH-STACK</h3>
 
                     <p class="desc">
-                        MVVM <br/> Retrofit <br/> RxJava <br/> XML UI <br/> Glide <br/> OpenCV
+                        MVVM <br/> Retrofit <br/> Jetpack Compose <br/> XML UI <br/> Glide <br/> OpenCV
                     </p>
 
                 </div>
