--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     <h3>MY PREFERRED TECH-STACK</h3>
 
                     <p class="desc">
-                        MVVM <br/> Retrofit <br/> Jetpack Compose <br/> XML UI <br/> Glide <br/> OpenCV
+                        MVVM <br/> Retrofit <br/> Jetpack Compose <br/> XML UI <br/> Glide <br/> ML Kit
                     </p>
 
                 </div>
