Updated my CV and cover letter

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                     android app. <a
                             href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus"
                             style="color:blue">Notify Plus</a> and <a
-                            href="https://github.com/hojat72elect/Smart-Gallery" style="color:blue">Smart Gallery</a> are the
+                            href="https://github.com/hojat72elect/Smart-Gallery" style="color:blue">Smart Gallery</a>
+                    are the
                     latest personal projects I've been working on. My current focus is on
                     maintainability, scalability, and reactiveness of the end product.</p>
             </div>
@@ -196,9 +197,9 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button">Hire me</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_3_October_2022.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_17_November_2022.pdf"
                target="_blank" title="Download CV" class="button">CV</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover Letter_3_October_2022.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover_Letter_16_November_2022.pdf"
                target="_blank" title="Read Cover letter" class="button">COVER LETTER</a>
         </div>
     </div>
