updated cv + cover letter

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                     <a href="https://play.google.com/store/apps/details?id=com.nthgensoftware.traderev.android&hl=en&pli=1"
                        style="color:blue">TradeRev</a>
                     android app. <a
-                            href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus"
-                            style="color:blue">Notify Plus</a> and <a
+                            href="https://github.com/hojat72elect/Game_News"
+                            style="color:blue">Game News</a> and <a
                             href="https://github.com/hojat72elect/Smart-Gallery" style="color:blue">Smart Gallery</a>
                     are the
                     latest personal projects I've been working on. My current focus is on
@@ -178,14 +178,21 @@
                     <strong>Android Room</strong>
                 </li>
                 <li>
-                    <div class="progress percent40"><span>40%</span></div>
+                    <div class="progress percent60"><span>60%</span></div>
                     <strong>Flow API</strong>
                 </li>
                 <li>
-                    <div class="progress percent35"><span>30%</span></div>
+                    <div class="progress percent50"><span>50%</span></div>
                     <strong>Compose</strong>
                 </li>
-
+                <li>
+                    <div class="progress percent40"><span>40%</span></div>
+                    <strong>Hilt</strong>
+                </li>
+                <li>
+                    <div class="progress percent40"><span>40%</span></div>
+                    <strong>Koin</strong>
+                </li>
 
             </ul>
             <!-- /skill-bars -->
@@ -285,6 +292,39 @@
 
             <div class="timeline-wrap">
 
+                <!--     Smart Gallery -->
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+
+
+                    <div class="timeline-header">
+                        <h3><a href="https://github.com/hojat72elect/Smart-Gallery">Smart Gallery</a></h3>
+                    </div>
+
+                    <div class="timeline-content">
+                        <p>
+                            This is an offline, feature-rich native Android gallery that supports various fule formats
+                            such as SVG, GIF, in addition to common file formats supported by android system. I'm trying
+                            to implement these technologies in this personal project:
+                        <ul>
+                            <li>Room persistence library</li>
+                            <li>MVVM architecture</li>
+                            <li>ViewModel</li>
+                            <li>DataBinding</li>
+                            <li>StateFlow and SharedFlow</li>
+                            <li>Navigation component</li>
+                        </ul>
+
+                        </p>
+                    </div>
+
+                </div>
+                <!-- /timeline-block -->
+
+                <!--     Notify Plus -->
                 <div class="timeline-block">
 
                     <div class="timeline-ico">
@@ -327,36 +367,6 @@
                         </ol>
                         <p>This app was published to Google Play Store in <a
                                 href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus">here</a>.
-                        </p>
-                    </div>
-
-                </div>
-                <!-- /timeline-block -->
-
-                <div class="timeline-block">
-
-                    <div class="timeline-ico">
-                        <i class="fa fa-briefcase"></i>
-                    </div>
-
-                    <div class="timeline-header">
-                        <h3><a href="https://github.com/hojat72elect/Smart-Gallery">Smart Gallery</a></h3>
-                    </div>
-
-                    <div class="timeline-content">
-                        <p>
-                            This is an offline, feature-rich native Android gallery that supports various fule formats
-                            such as SVG, GIF, in addition to common file formats supported by android system. I'm trying
-                            to implement these technologies in this personal project:
-                        <ul>
-                            <li>Room persistence library</li>
-                            <li>MVVM architecture</li>
-                            <li>ViewModel</li>
-                            <li>DataBinding</li>
-                            <li>StateFlow and SharedFlow</li>
-                            <li>Navigation component</li>
-                        </ul>
-
                         </p>
                     </div>
 
