updated cv + cover letter

--- a/index.html
+++ b/index.html
@@ -292,6 +292,41 @@
 
             <div class="timeline-wrap">
 
+                <!--     Game News -->
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+
+
+                    <div class="timeline-header">
+                        <h3><a href="https://github.com/hojat72elect/Game_News">Game News</a></h3>
+                    </div>
+
+                    <div class="timeline-content">
+                        <p>
+                            This is a native Android app which connects to <a href="https://www.igdb.com/">IGDB</a> API
+                            for browsing through latest news of video games. Some of the latest techs I've been using in
+                            this codebase are:
+                        <ul>
+                            <li>Jetpack Compose</li>
+                            <li>Accompanist</li>
+                            <li>Dagger Hilt</li>
+                            <li>Room</li>
+                            <li>DataStore</li>
+                            <li>OkHttp</li>
+                            <li>Retrofit</li>
+                            <li>Junit + Truth + Mockk (all for unit testing and mock testing)</li>
+                            <li>Compose test (for snapshot tests specific to Android UI)</li>
+                        </ul>
+
+                        </p>
+                    </div>
+
+                </div>
+                <!-- /timeline-block -->
+
                 <!--     Smart Gallery -->
                 <div class="timeline-block">
 
