--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 <img src="images/HOJAT.png" alt="Profile Picture">
 
-                <p class="lead">I'm a published native Android app developer, recently finished an internship in <a
+                <p class="lead">I'm a published mobile app developer, recently finished an internship in <a
                         href="https://www.karglobal.com/" style="color:blue">KAR Global</a> during which I was working
                     on
                     <a href="https://play.google.com/store/apps/details?id=com.nthgensoftware.traderev.android&hl=en&pli=1"
@@ -311,17 +311,15 @@
                             this codebase are:
                         <ul>
                             <li>Jetpack Compose</li>
-                            <li>Accompanist</li>
+                            <li>Accompanist (utilities and extensions for Compose library)</li>
                             <li>Dagger Hilt</li>
-                            <li>Room</li>
-                            <li>DataStore</li>
-                            <li>OkHttp</li>
-                            <li>Retrofit</li>
+                            <li>Room + DataStore (for data storage)</li>
+                            <li>Google Analytics</li>
+                            <li>Firebase Crashlytics</li>
+                            <li>OkHttp + retrofit (for networking)</li>
                             <li>Junit + Truth + Mockk (all for unit testing and mock testing)</li>
-                            <li>Compose test (for snapshot tests specific to Android UI)</li>
                         </ul>
 
-                        </p>
                     </div>
 
                 </div>
@@ -353,7 +351,6 @@
                             <li>Navigation component</li>
                         </ul>
 
-                        </p>
                     </div>
 
                 </div>
@@ -415,8 +412,7 @@
         <!-- /col-twelve -->
 
     </div>
-    <!-- /resume-timeline -->
-    </div>
+
 </section>
 <!-- /features -->
 
