--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <div class="intro-info">
 
-                <img src="images/HOJAT.png" alt="Profile Picture">
+                <img src="images/Hojat.png" alt="Profile Picture">
 
                 <p class="lead">I'm a published mobile app developer, recently finished an internship in <a
                         href="https://www.karglobal.com/" style="color:blue">KAR Global</a> during which I was working
