Update repo links

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                     <a href="https://play.google.com/store/apps/details?id=com.nthgensoftware.traderev.android&hl=en&pli=1"
                        style="color:blue">TradeRev</a>
                     android app. <a
-                            href="https://github.com/hojat72elect/Game_News"
-                            style="color:blue">Game News</a> and <a
+                            href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews"
+                            style="color:blue">Game Hub</a> and <a
                             href="https://github.com/hojat72elect/Smart-Gallery" style="color:blue">Smart Gallery</a>
                     are the
                     latest personal projects I've been working on. My current focus is on
@@ -292,7 +292,7 @@
 
             <div class="timeline-wrap">
 
-                <!--     Game News -->
+                <!--     Game Hub -->
                 <div class="timeline-block">
 
                     <div class="timeline-ico">
@@ -301,7 +301,7 @@
 
 
                     <div class="timeline-header">
-                        <h3><a href="https://github.com/hojat72elect/Game_News">Game News</a></h3>
+                        <h3><a href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews">Game Hub</a></h3>
                     </div>
 
                     <div class="timeline-content">
