--- a/index.html
+++ b/index.html
@@ -120,11 +120,9 @@
                        style="color:blue">TradeRev</a>
                     android app. <a
                             href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews"
-                            style="color:blue">Game Hub</a> and <a
-                            href="https://github.com/hojat72elect/Smart-Gallery" style="color:blue">Smart Gallery</a>
-                    are the
-                    latest personal projects I've been working on. My current focus is on
-                    maintainability, scalability, and reactiveness of the end product.</p>
+                            style="color:blue">Game Hub</a> is the
+                    latest personal project I have developed and published to Google Play store. My current focus is on
+                    Kotlin Multiplatform Mobile (KMM).</p>
             </div>
 
         </div>
@@ -301,7 +299,8 @@
 
 
                     <div class="timeline-header">
-                        <h3><a href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews">Game Hub</a></h3>
+                        <h3><a href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews">Game Hub</a>
+                        </h3>
                     </div>
 
                     <div class="timeline-content">
