--- a/index.html
+++ b/index.html
@@ -113,16 +113,17 @@
 
                 <img src="images/Hojat.png" alt="Profile Picture">
 
-                <p class="lead">I'm a published mobile app developer, recently finished an internship in <a
-                        href="https://www.karglobal.com/" style="color:blue">KAR Global</a> during which I was working
-                    on
-                    <a href="https://play.google.com/store/apps/details?id=com.nthgensoftware.traderev.android&hl=en&pli=1"
-                       style="color:blue">TradeRev</a>
-                    android app. <a
+                <p class="lead">I'm a professional mobile app developer with several years of experience in various
+                    companies such as <a
+                            href="https://www.karglobal.com/" style="color:blue">KAR Global</a> and <a
+                            href="https://esperlos.ir/" style="color:blue">Esperlos</a>. <a
                             href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews"
                             style="color:blue">Game Hub</a> is the
                     latest personal project I have developed and published to Google Play store. My current focus is on
-                    Kotlin Multiplatform Mobile (KMM).</p>
+                    <a href="https://kotlinlang.org/docs/multiplatform.html#sample-projects" style="color:blue">Kotlin
+                        Multiplatform</a> and <a
+                            href="https://www.mongodb.com/mern-stack#:~:text=MERN%20stands%20for%20MongoDB%2C%20Express,a%20client%2Dside%20JavaScript%20framework"
+                            style="color:blue">MERN</a> for full stack development.</p>
             </div>
 
         </div>
@@ -202,7 +203,7 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button">Hire me</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_29_January_2023.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_12_March_2023.pdf"
                target="_blank" title="Download CV" class="button">CV</a>
             <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover_Letter_29_January_2023.pdf"
                target="_blank" title="Read Cover letter" class="button">COVER LETTER</a>
@@ -305,7 +306,9 @@
 
                     <div class="timeline-content">
                         <p>
-                            This is a native Android app which connects to <a href="https://www.igdb.com/">IGDB</a> API
+                            This is a native Android app which connects to <a href="https://api-docs.igdb.com/">IGDB</a>
+                            and
+                            <a href="https://www.gamespot.com/api/">GameSpot</a> APIs
                             for browsing through latest news of video games. Some of the latest techs I've been using in
                             this codebase are:
                         <ul>
