--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
 
                 <img src="images/Hojat.png" alt="Profile Picture">
 
-                <p class="lead">I'm a professional mobile app developer with several years of experience in various
+                <p class="lead">A professional mobile app developer with several years of experience in various
                     companies such as <a
                             href="https://www.karglobal.com/" style="color:blue">KAR Global</a> and <a
                             href="https://esperlos.ir/" style="color:blue">Esperlos</a>. <a
                             href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews"
                             style="color:blue">Game Hub</a> is the
                     latest personal project I have developed and published to Google Play store. My current focus is on
-                    <a href="https://kotlinlang.org/docs/multiplatform.html#sample-projects" style="color:blue">Kotlin
+                    <a href="https://kotlinlang.org/docs/multiplatform.html" style="color:blue">Kotlin
                         Multiplatform</a> and <a
-                            href="https://www.mongodb.com/mern-stack#:~:text=MERN%20stands%20for%20MongoDB%2C%20Express,a%20client%2Dside%20JavaScript%20framework"
+                            href="https://www.mongodb.com/mern-stack"
                             style="color:blue">MERN</a> for full stack development.</p>
             </div>
 
