--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
 <html class="no-js" lang="en">
-<!--<![endif]-->
 
 <head>
 
@@ -39,8 +38,6 @@
 
 <body id="top">
 
-<!-- header
-================================================== -->
 <header>
     <div class="row">
 
@@ -55,7 +52,8 @@
                 <ul class="main-navigation">
                     <li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
                     <li><a class="smoothscroll" href="#about" title="">About me</a></li>
-                    <li><a class="smoothscroll" href="#Work" title="">Work Experience</a></li>
+                    <li><a class="smoothscroll" href="#Education" title="">Education</a></li>
+                    <li><a class="smoothscroll" href="#portfolio" title="">Apps portfolio</a></li>
                     <li><a class="smoothscroll" href="#MORE" title="">MORE</a></li>
 
                 </ul>
@@ -66,10 +64,7 @@
     </div>
     <!-- /row -->
 </header>
-<!-- /header -->
 
-<!-- intro section
-================================================== -->
 <section id="intro">
 
     <div class="intro-overlay"></div>
@@ -83,7 +78,7 @@
                 <h1>Hojat Ghasemi</h1>
 
                 <p class="intro-position">
-                    <span>Native Android App Developer</span>
+                    <span>Mobile Application Developer</span>
                 </p>
 
                 <a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
@@ -96,11 +91,8 @@
 
 
 </section>
-<!-- /intro -->
 
 
-<!-- about section
-================================================== -->
 <section id="about">
 
     <div class="row section-intro">
@@ -211,12 +203,9 @@
     </div>
 
 </section>
-<!-- /process-->
 
 
-<!-- resume Section
-================================================== -->
-<section id="Work" class="grey-section">
+<section id="Education" class="grey-section">
 
     <div class="row resume-timeline">
 
@@ -276,9 +265,15 @@
         <!-- /col-twelve -->
 
     </div>
-    <!-- /resume-timeline -->
 
-    <div class="row resume-timeline">
+</section>
+
+
+<!-- Portfolio Section
+================================================== -->
+<section id="portfolio" style="background-color:#FFFFFF">
+
+    <div class="row resume-timeline" >
 
         <div class="col-twelve resume-header">
 
@@ -416,15 +411,6 @@
     </div>
 
 </section>
-<!-- /features -->
-
-
-<!-- Portfolio Section
-================================================== -->
-
-
-<!-- CTA Section
-================================================== -->
 
 
 <!-- services Section
