defined "work experience" section.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <ul class="main-navigation">
                     <li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
                     <li><a class="smoothscroll" href="#about" title="">About me</a></li>
+                    <li><a class="smoothscroll" href="#work" title="">Work experience</a></li>
                     <li><a class="smoothscroll" href="#Education" title="">Education</a></li>
                     <li><a class="smoothscroll" href="#portfolio" title="">Apps portfolio</a></li>
                     <li><a class="smoothscroll" href="#MORE" title="">MORE</a></li>
@@ -91,7 +92,6 @@
 
 
 </section>
-
 
 <section id="about">
 
@@ -204,8 +204,96 @@
 
 </section>
 
+<section id="Work" class="grey-section">
 
-<section id="Education" class="grey-section">
+    <div class="row resume-timeline">
+
+        <div class="col-twelve resume-header">
+
+            <h2>Work Experience</h2>
+
+        </div>
+        <!-- /resume-header -->
+
+        <div class="col-twelve">
+
+            <div class="timeline-wrap">
+
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+
+                    <div class="timeline-header">
+                        <h3>Android Developer Intern - <a href="https://www.karglobal.com/">KAR Global</a> - (June 2022
+                            - September 2022)</h3>
+                        <p>Participated in maintenance and development of <a
+                                href="https://play.google.com/store/apps/details?id=com.nthgensoftware.traderev.android&hl=en">TradeRev
+                            Android application</a>;
+                            some of the main responsibilities:
+                        <ul>
+                            <li>Migration from Java to Kotlin</li>
+                            <li>Migration from Kotlin synthetics to View binding library</li>
+                            <li>Migration from MVP to MVVM architecture</li>
+                            <li>Migration from Android View library (XML) to Jetpack Compose</li>
+                            <li>Adding functionality for uploading photos from gallery to the server</li>
+                            <li>Further developing the dependency injection module of the app using <a
+                                    href="https://insert-koin.io/">Koin</a> library
+                            </li>
+                            <li>Migrating DataSources of the app from <a
+                                    href="https://developer.android.com/reference/kotlin/androidx/paging/PositionalDataSource">PositionalDataSource</a>
+                                to
+                                <a href="https://developer.android.com/reference/kotlin/androidx/paging/PagingSource">PagingSource</a>
+                                (from paging
+                                2 to paging 3)
+                            </li>
+                            <li>Resolving business logic issues/bugs</li>
+                        </ul>
+                        </p>
+                    </div>
+
+
+                </div>
+                <!-- /timeline-block -->
+
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+
+                    <div class="timeline-header">
+                        <h3>Android Engineer - <a
+                                href="https://esperlos.ir/">Esperlos</a> - (July 2017 - March 2019)</h3>
+                        <p>
+                            Participated in design and development of various Android apps as part of esperlos mobile
+                            team. Some responsibilities:
+                        <ul>
+                            <li>Design, development, debugging, and maintenance of an E-commerce Android app</li>
+                            <li>Laying out DI module of the app with Hilt</li>
+                            <li>Migration from Java to Kotlin</li>
+                            <li>Participated in creating UI of the app (XML)</li>
+                        </ul>
+                        </p>
+                    </div>
+
+
+                </div>
+                <!-- /timeline-block -->
+
+
+            </div>
+            <!-- /timeline-wrap -->
+
+        </div>
+        <!-- /col-twelve -->
+
+    </div>
+
+</section>
+
+<section id="Education" style="background-color:#FFFFFF">
 
     <div class="row resume-timeline">
 
@@ -268,12 +356,11 @@
 
 </section>
 
-
 <!-- Portfolio Section
 ================================================== -->
-<section id="portfolio" style="background-color:#FFFFFF">
+<section id="portfolio" class="grey-section">
 
-    <div class="row resume-timeline" >
+    <div class="row resume-timeline">
 
         <div class="col-twelve resume-header">
 
@@ -412,7 +499,6 @@
 
 </section>
 
-
 <!-- services Section
 ================================================== -->
 <section id="MORE">
@@ -513,10 +599,8 @@
 </section>
 <!-- /services -->
 
-
 <!-- stats Section
 ================================================== -->
-
 
 <!-- contact
 ================================================== -->
@@ -609,7 +693,6 @@
 
 </section>
 <!-- /contact -->
-
 
 <!-- footer
 ================================================== -->
