--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 
                 <img src="images/Hojat.png" alt="Profile Picture">
 
-                <p class="lead">A professional mobile app developer with several years of experience in various
+                <p class="lead">Hojat is a professional mobile app developer with several years of experience in various
                     companies such as <a
                             href="https://www.karglobal.com/" style="color:blue">KAR Global</a> and <a
                             href="https://esperlos.ir/" style="color:blue">Esperlos</a>. <a
                             href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews"
                             style="color:blue">Game Hub</a> is the
-                    latest personal project I have developed and published to Google Play store. My current focus is on
+                    latest personal project he's developed and published to Google Play store. His current focus is on
                     <a href="https://kotlinlang.org/docs/multiplatform.html" style="color:blue">Kotlin
                         Multiplatform</a> and <a
                             href="https://www.mongodb.com/mern-stack"
@@ -234,7 +234,7 @@
                             some of the main responsibilities:
                         <ul>
                             <li>Migration from Java to Kotlin</li>
-                            <li>Migration from Kotlin synthetics to View binding library</li>
+                            <li>Migration from Kotlin synthetics/Butterknife to View binding library</li>
                             <li>Migration from MVP to MVVM architecture</li>
                             <li>Migration from Android View library (XML) to Jetpack Compose</li>
                             <li>Adding functionality for uploading photos from gallery to the server</li>
@@ -250,7 +250,6 @@
                             </li>
                             <li>Resolving business logic issues/bugs</li>
                         </ul>
-                        </p>
                     </div>
 
 
@@ -275,7 +274,6 @@
                             <li>Migration from Java to Kotlin</li>
                             <li>Participated in creating UI of the app (XML)</li>
                         </ul>
-                        </p>
                     </div>
 
 
@@ -391,19 +389,18 @@
                             This is a native Android app which connects to <a href="https://api-docs.igdb.com/">IGDB</a>
                             and
                             <a href="https://www.gamespot.com/api/">GameSpot</a> APIs
-                            for browsing through latest news of video games. Some of the latest techs I've been using in
+                            for viewing all the latest news about video games. Some technologies I used in
                             this codebase are:
                         <ul>
                             <li>Jetpack Compose</li>
                             <li>Accompanist (utilities and extensions for Compose library)</li>
                             <li>Dagger Hilt</li>
                             <li>Room + DataStore (for data storage)</li>
-                            <li>Google Analytics</li>
-                            <li>Firebase Crashlytics</li>
+                            <li>Kotlin Flow API</li>
+                            <li>GitHub CI</li>
                             <li>OkHttp + retrofit (for networking)</li>
-                            <li>Junit + Truth + Mockk (all for unit testing and mock testing)</li>
+                            <li>Junit + Truth + Turbine + Mockk (all for unit testing and mock testing)</li>
                         </ul>
-
                     </div>
 
                 </div>
@@ -423,7 +420,7 @@
 
                     <div class="timeline-content">
                         <p>
-                            This is an offline, feature-rich native Android gallery that supports various fule formats
+                            This is an offline, feature-rich native Android gallery that supports various file formats
                             such as SVG, GIF, in addition to common file formats supported by android system. I'm trying
                             to implement these technologies in this personal project:
                         <ul>
@@ -525,10 +522,10 @@
 
                 <div class="service-content">
 
-                    <h3>MY PREFERRED TECH-STACK</h3>
+                    <h3>Hojat's preferred tech-stack</h3>
 
                     <p class="desc">
-                        MVVM <br/> Retrofit <br/> Jetpack Compose <br/> XML UI <br/> Glide <br/> ML Kit
+                        Kotlin Multiplatform <br/> Realm DB <br/> Jetpack Compose + Swift UI <br/> MERN <br/>
                     </p>
 
                 </div>
